--- a/docs/partial/multivariate.html
+++ b/docs/partial/multivariate.html
@@ -122,7 +122,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Training courses</a>
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Tutorials</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -167,7 +167,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/dave_network_to_cytoscape.html" class="sidebar-item-text sidebar-link">Publication quality networks</a>
+  <a href="../partial/cytoscape_examples.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Publication quality networks</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -215,7 +215,7 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 <section id="the-multivariate-module-supports-dimensional-reduction-and-projection-pursuits." class="level5">
-<h5 class="anchored" data-anchor-id="the-multivariate-module-supports-dimensional-reduction-and-projection-pursuits.">the <span class="txbox_green">multivariate</span> module supports dimensional reduction and projection pursuits.</h5>
+<h5 class="anchored" data-anchor-id="the-multivariate-module-supports-dimensional-reduction-and-projection-pursuits.">The <span class="txbox_green">multivariate</span> module supports dimensional reduction and projection pursuits.</h5>
 </section>
 <section id="pca" class="level3">
 <h3 class="anchored" data-anchor-id="pca"><span class="txbox_green">PCA</span></h3>
