--- a/docs/partial/stats.html
+++ b/docs/partial/stats.html
@@ -141,7 +141,7 @@ div.csl-indent {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Training courses</a>
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Tutorials</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -186,7 +186,7 @@ div.csl-indent {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/dave_network_to_cytoscape.html" class="sidebar-item-text sidebar-link">Publication quality networks</a>
+  <a href="../partial/cytoscape_examples.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">9</span>&nbsp; <span class="chapter-title">Publication quality networks</span></a>
   </div>
 </li>
         <li class="sidebar-item">
