add API example

--- a/docs/partial/workflows.html
+++ b/docs/partial/workflows.html
@@ -127,7 +127,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Training courses</a>
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Tutorials</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../partial/API.html" class="sidebar-item-text sidebar-link">API</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -172,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/dave_network_to_cytoscape.html" class="sidebar-item-text sidebar-link">Publication quality networks</a>
+  <a href="../partial/cytoscape_examples.html" class="sidebar-item-text sidebar-link">Publication quality networks</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -590,7 +595,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
   <div class="nav-page nav-page-next">
       <a href="../partial/courses.html" class="pagination-link">
-        <span class="nav-page-text">Training courses</span> <i class="bi bi-arrow-right-short"></i>
+        <span class="nav-page-text">Tutorials</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
